# LongCodeZip

./: demo.py  pyproject.toml
assets/: example_context.java
experiments/module-summarization/: code_compressor.py  main.py
longcodezip/: __init__.py
